# ogele

./: .gitignore  .gitmodules  CMakeLists.txt  Generate.bat
core/: CMakeLists.txt  ogele.cpp  ogele.h
core/GL/: glew.c
core/application/: application.cpp  application.h  window.cpp
core/buffer/: vectors.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp
core/components/: camera.cpp  camera.h  terrain.cpp  terrain.h  transform.cpp
core/components/camera/: camera.cpp
core/components/clouds/: clouds.cpp  clouds.h
core/components/terrain/: terrain.cpp  terrain.h
core/components/transform/: transform.cpp  transform.h
core/framebuffer/: framebuffer.cpp  renderTarget.cpp  renderTarget.h
core/glm/detail/: dummy.cpp
core/helpers/: guiHelper.cpp  helpers.cpp  math3D.cpp
core/imgui/: imgui.cpp  imgui_impl_glfw_gl3.cpp  imgui_internal.h
core/include/: ogele.h
core/include/application/: application.h  window.h
core/include/buffer/: vectors.h  vertexArray.h  vertexBuffer.h
core/include/components/: camera.h  clouds.h  terrain.h  transform.h
core/include/framebuffer/: framebuffer.h  renderTarget.h
core/include/helpers/: guiHelper.h  helpers.h  math3D.h
core/include/imgui/: imgui_internal.h
core/include/mesh/: coordBasisMesh.h  gridMesh.h  meshBase.h  modelMesh.h  screenQuadMesh.h  terrainMesh.h
core/include/object/: object.h  resource.h
core/include/other/: enums.h  glerror.h  glstatic.h
core/include/pipelines/: deferredPBRPipeline.h
core/include/query/: gpuStopwatch.h  query.h
core/include/shader/: material.h  shaderCompileException.h  shaderLoader.h  shaderProgram.h  shaderStage.h
core/include/texture/: textureBase.h  textureLoaderHelpers.h
core/mesh/: coordBasisMesh.cpp  coordBasisMesh.h  meshBase.cpp  modelMesh.cpp  modelMesh.h  screenQuadMesh.cpp  terrainMesh.cpp  terrainMesh.h
core/object/: internalResources.cpp  object.cpp  resource.cpp  resource.h
core/other/: enums.h  glerror.cpp  glstatic.cpp  glstatic.h
core/pipelines/: deferredPBRPipeline.cpp  deferredPBRPipeline.h
core/query/: gpuStopwatch.h  query.cpp
core/shader/: isSamplerIsImage.cpp  material.cpp  material.h  shaderCompileException.cpp  shaderCompileException.h  shaderLoader.cpp  shaderLoader.h  shaderProgram.cpp  shaderProgram.h  shaderStage.cpp
core/source/: libimpl.cpp  ogele.h  stdafx.h
core/source/application/: application.cpp  application.h  window.cpp  window.h
core/source/buffer/: vectors.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h
core/source/components/: camera.cpp  camera.h  clouds.cpp  clouds.h  particles.cpp  particles.h  renderable.h  renderer.cpp  renderer.h  rigidbody.cpp  rigidbody.h  sparks.cpp  sparks.h  terrain.cpp  terrain.h  transform.cpp  transform.h
core/source/framebuffer/: framebuffer.cpp  framebuffer.h  renderTarget.cpp  renderTarget.h
core/source/gui/: gui.cpp  gui.h
core/source/helpers/: debugDraw.cpp  guiHelper.cpp  guiHelper.h  helpers.cpp  helpers.h  math3D.cpp  math3D.h  primitiveDraw.cpp  vertexAccumulator.cpp  vertexAccumulator.h
core/source/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw_gl3.cpp
core/source/jzon/: Jzon.cpp  Jzon.h
core/source/lua/: state.cpp  state.h
core/source/mesh/: coordBasisMesh.cpp  coordBasisMesh.h  gridMesh.cpp  gridMesh.h  meshBase.cpp  meshBase.h  modelMesh.cpp  modelMesh.h  screenQuadMesh.cpp  screenQuadMesh.h  terrainMesh.cpp  terrainMesh.h
core/source/model/: model.cpp  model.h  modelLoader.cpp  modelLoader.h
core/source/object/: actor.cpp  actor.h  internalResources.cpp  object.cpp  object.h  resource.cpp
core/source/other/: enums.h  glerror.cpp  glerror.h  glstatic.cpp  glstatic.h
core/source/pipeline/: renderPipeline.cpp  renderPipeline.h  renderPipelineLoader.cpp  renderPipelineLoader.h
core/source/pipelines/: deferredPBRPipeline.cpp  deferredPBRPipeline.h
core/source/query/: gpuStopwatch.h  query.cpp  query.h
core/source/resource/: internalResources.cpp  resource.cpp  resource.h  resourceContainer.cpp  resourceContainer.h
core/source/shader/: isSamplerIsImage.cpp  material.cpp  material.h  shaderCompileException.cpp  shaderCompileException.h  shaderLoader.cpp  shaderLoader.h  shaderProgram.cpp  shaderProgram.h  shaderStage.cpp  shaderStage.h
core/source/texture/: textureBase.cpp  textureBase.h  textureLoaderHelpers.cpp  textureLoaderHelpers.h
core/source/world/: world.cpp  world.h
core/texture/: textureBase.cpp  textureBase.h  textureLoaderHelpers.cpp  textureLoaderHelpers.h
core/texture/texture2D/: texture2D.cpp  texture2D.h  texture2DLoader.cpp  texture2DLoader.h
core/texture/texture3D/: texture3D.cpp
core/texture/textureCube/: textureCube.cpp  textureCube.h  textureCubeLoader.cpp
dummy/: CMakeLists.txt  OgeleDummy.cpp  imgui.ini
dummy/Resources/CloudyLightRays/: Resources.json
dummy/Resources/Lighting/: GenerateCloudNoise.glsl  LightingCompose.frag  LightingCompose.vert  LightingCompute.frag  LightingCompute.vert  LightingResources.json  LightingResources.xml  Skybox.glsl  Tonemapping.frag  Tonemapping.vert
dummy/Resources/Terrain/: TerrainDraw.frag  TerrainDraw.vert  TerrainGen.compute  TerrainNormals.compute  TerrainResources.json  TerrainResources.xml  TerrainTessControl.glsl  TerrainTessEval.glsl
dummy/resources/: Log.txt
dummy/resources/Lighting/: CloudsRender.frag  CloudsRender.vert  GenerateCloudNoise.comp  GenerateCloudNoise.glsl  GenerateClouds.comp  GenerateClouds.glsl  LightingCompute.frag  LightingCompute.vert  LightingResources.json  Pipeline.lua  Skybox.comp  Tonemapping.frag  pipeline.json
dummy/resources/Terrain/: TerrainDraw.frag  TerrainDraw.vert  TerrainNormals.compute  TerrainTessControl.glsl  (+2 more)
dummy/source/: OgeleDummy.cpp
raySandbox/: CMakeLists.txt
raySandbox/resources/: Bake.comp  Concave.mtl  Cube.mtl  Fresco.mtl  Log.txt  Raytrace.frag  Raytrace.json  Raytrace.vert  Teapot.mtl  pots_modif.tri
raySandbox/source/: main.cpp
underwater/: CMakeLists.txt
underwater/resources/: Log.txt
underwater/source/: main.cpp  submarine.cpp  submarine.h
(+65 files in other folders)
