cmake_minimum_required(VERSION 3.9)
project(ogele)
set(CMAKE_SUPPRESS_REGENERATION true)
set(CMAKE_CXX_STANDARD 17)
if (MSVC)
	add_compile_options("/MP")
endif (MSVC)
add_definitions(-DGLEW_STATIC -D_USE_MATH_DEFINES -DGLM_ENABLE_EXPERIMENTAL -DGLM_FORCE_CTOR_INIT)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT dummy)

set(GLM_TEST_ENABLE OFF)

set(GLFW_BUILD_EXAMPLES OFF)
set(GLFW_BUILD_TESTS OFF)
set(GLFW_BUILD_DOCS OFF)

set(glew-cmake_BUILD_SHARED OFF)
set(glew-cmake_BUILD_MULTI_CONTEXT ON)
set(BUILD_SHARED_LIBS OFF)

set(ASSIMP_NO_EXPORT ON)
set(ASSIMP_BUILD_ASSIMP_TOOLS OFF)
set(ASSIMP_BUILD_TESTS OFF)

set(USE_DOUBLE_PRECISION ON)
set(BUILD_CPU_DEMOS OFF)
set(BUILD_OPENGL3_DEMOS OFF)
set(BUILD_BULLET2_DEMOS OFF)
set(BUILD_EXTRAS OFF)
set(BUILD_UNIT_TESTS OFF)

add_subdirectory(glew-cmake)
add_subdirectory(glfw)
add_subdirectory(assimp)
add_subdirectory(lua)
add_subdirectory(bullet3)
#add_subdirectory(glm)
include_directories("glm")
include_directories("stb")
include_directories("bullet3/src")
add_subdirectory(core)
add_subdirectory(dummy)
add_subdirectory(raySandbox)
add_subdirectory(underwater)